Kubernetes/apps/prod/sinless-games/garage/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-admin
  namespace: sinless-games
spec:
  selector:
    app.kubernetes.io/name: garage
  ports:
    - name: http-admin
      port: 3903
      targetPort: 3903
