Kubernetes/apps/prod/sinless-games/garage/service-headless.yaml
# Kubernetes/apps/prod/sinless-games/garage/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-headless
  namespace: sinless-games
  labels:
    app.kubernetes.io/name: garage
    app.kubernetes.io/component: peer-discovery
    app.kubernetes.io/part-of: garage
    security.sinlessgames.io/exposure: cluster-internal
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: garage
  ports:
    - name: tcp-rpc
      port: 3901
      targetPort: 3901
      protocol: TCP
      appProtocol: tcp
