Kubernetes/apps/prod/sinless-games/garage/service-s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-s3
  namespace: sinless-games
spec:
  selector:
    app.kubernetes.io/name: garage
  ports:
    - name: http-s3
      port: 3900
      targetPort: 3900
