Kubernetes/apps/prod/sinless-games/garage/ingress-garage-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-ui
  namespace: sinless-games
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  ingressClassName: istio
  rules:
    - host: garage.sinlessgames.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-ui
                port:
                  number: 3909
