Kubernetes/apps/prod/sinless-games/garage/networkpolicy-garage-bootstrap.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: garage-bootstrap-allow-k8s
  namespace: sinless-games
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: garage-bootstrap
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 10.43.0.0/16
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
    - to:
        - ipBlock:
            cidr: 10.10.40.10/32
        - ipBlock:
            cidr: 10.10.40.11/32
        - ipBlock:
            cidr: 10.10.40.12/32
        - ipBlock:
            cidr: 10.10.40.13/32
      ports:
        - protocol: TCP
          port: 6443
