Kubernetes/apps/prod/sinless-games/garage/networkpolicy-garage-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: garage-ui-allow-ingress
  namespace: sinless-games
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: garage-webui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - protocol: TCP
          port: 3909
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sinless-games
      ports:
        - protocol: TCP
          port: 3909
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sinless-games
          podSelector:
            matchLabels:
              app.kubernetes.io/name: garage
      ports:
        - protocol: TCP
          port: 3903
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
